# Rheoscale_2.0

./: README.md  pyproject.toml
.github/workflows/: test.yml
Python Rheoscale 2.0 examples/Python_RheoScale_Plpro_ABUNDANCE/: Plpro_abundance_raw_data.csv  Plpro_abundance_running_config.json
Python Rheoscale 2.0 examples/Python_RheoScale_Plpro_ACTIVITY/: Plpro_activity_raw_data.csv  Plpro_activity_running_config.json
rheoscale/: cli.py  plotting_histograms.py  rheoscale_runner.py
rheoscale/policy/: check_input_cofig.py
tests/: test_config.py
